--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest --watchAll"
   },
   "devDependencies": {
-    "jest": "^29.4.3"
+    "jest": "^29.4.3",
+    "js-sha3": "^0.8.0"
   }
 }
