--- a/package.json
+++ b/package.json
@@ -4,10 +4,18 @@
   "main": "index.js",
   "repository": "https://github.com/forgetful-functor/eth-from-scratch.git",
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "start": "node ./api",
+    "dev": "yarn nodemon ./api"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "jest": "^29.4.3",
+    "js-sha3": "^0.8.0",
+    "pubnub": "^7.2.2"
   },
   "devDependencies": {
-    "jest": "^29.4.3",
-    "js-sha3": "^0.8.0"
+    "nodemon": "^2.0.20"
   }
 }
