--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.18.2",
     "jest": "^29.4.3",
     "js-sha3": "^0.8.0",
-    "pubnub": "^7.2.2"
+    "pubnub": "^7.2.2",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
