--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "dev": "yarn nodemon ./api",
     "dev-peer": "yarn nodemon ./api --peer"
   },
+  "jest":{
+    "testEnvironment": "node"
+  },
   "dependencies": {
     "dotenv": "^16.0.3",
+    "elliptic": "^6.5.4",
     "express": "^4.18.2",
     "jest": "^29.4.3",
     "js-sha3": "^0.8.0",
