--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "yarn nodemon ./api",
     "dev-peer": "yarn nodemon ./api --peer"
   },
-  "jest":{
+  "jest": {
     "testEnvironment": "node"
   },
   "dependencies": {
@@ -19,7 +19,8 @@
     "jest": "^29.4.3",
     "js-sha3": "^0.8.0",
     "pubnub": "^7.2.2",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
