--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "test": "jest --watchAll",
     "start": "node ./api",
     "dev": "yarn nodemon ./api",
-    "dev-peer": "yarn nodemon ./api --peer"
+    "dev-peer": "yarn nodemon ./api --peer",
+    "api-test": "node ./api-test.js"
   },
   "jest": {
     "testEnvironment": "node"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "elliptic": "^6.5.4",
     "express": "^4.18.2",
